--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.4.11",
     "mxgraph": "^3.9.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
