--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "element-ui": "^2.4.11",
     "lodash": "^4.17.11",
     "mxgraph": "^3.9.12",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue": "^2.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -31,6 +30,8 @@
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
