--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "element-ui": "^2.4.11",
+    "file-saver": "^2.0.1",
     "lodash": "^4.17.11",
     "mxgraph": "^3.9.12",
     "vue": "^2.5.2"
