--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-mxgraph-demo",
+  "name": "pokemon-diagram",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "jinzhanye <jinzhan.ye@foxmail.com>",
